--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mikro-orm/mysql": "^5.1.3",
     "@mikro-orm/nestjs": "^5.0.1",
     "@mikro-orm/sql-highlighter": "^1.0.1",
+    "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
@@ -36,7 +37,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger": "^0.7.5"
+    "swagger": "^0.7.5",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -51,12 +53,5 @@
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "typescript": "^4.3.5"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
