--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,19 @@
-DB_NAME=thu_demo
+PORT=3000
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=vatta
+DB_USERNAME=root
 DB_PASSWORD=root
+DB_SYNCHRONIZE=true
+
+INFURA_RFC=
+
+SECRET_KEY=vatta
+EXPIRED_TOKEN=7d
+MAX_POINT=100
+
+HOST_EMAIL=yoonabar@gmail.com
+PASS_EMAIL=
+EXPIRED_OTP=90
