--- a/.env.dev
+++ b/.env.dev
@@ -11,9 +11,9 @@ DB_SYNCHRONIZE=true
 INFURA_RFC=
 
 SECRET_KEY=vatta
-EXPIRED_TOKEN=7d
+EXPIRED_TOKEN=100d
 MAX_POINT=100
 
-HOST_EMAIL=yoonabar@gmail.com
+HOST_EMAIL=
 PASS_EMAIL=
 EXPIRED_OTP=90
