--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
+    "@types/lodash": "^4.14.182",
     "@types/multer": "^1.4.7",
+    "@types/n-readlines": "^1.0.3",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
@@ -33,6 +35,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.0",
     "lodash": "4.17.21",
+    "n-readlines": "^1.0.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
