--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@mikro-orm/core": "^5.1.3",
+    "@mikro-orm/mariadb": "5.1.5",
     "@mikro-orm/mysql": "^5.1.3",
     "@mikro-orm/nestjs": "^5.0.1",
     "@mikro-orm/sql-highlighter": "^1.0.1",
@@ -25,11 +26,6 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
-    "@types/lodash": "^4.14.182",
-    "@types/multer": "^1.4.7",
-    "@types/n-readlines": "^1.0.3",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -40,7 +36,6 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger": "^0.7.5",
     "swagger-ui-express": "^4.4.0"
@@ -49,13 +44,19 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.182",
+    "@types/multer": "^1.4.7",
+    "@types/n-readlines": "^1.0.3",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.3.2",
+    "rimraf": "^3.0.2",
     "source-map-support": "^0.5.20",
     "typescript": "^4.3.5"
   }
