--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@mikro-orm/core": "^5.1.3",
-    "@mikro-orm/mariadb": "5.1.5",
+    "@mikro-orm/mariadb": "5.1.3",
     "@mikro-orm/mysql": "^5.1.3",
     "@mikro-orm/nestjs": "^5.0.1",
     "@mikro-orm/sql-highlighter": "^1.0.1",
@@ -26,6 +26,7 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
+    "axios": "^1.7.8",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
